# firstappproj

./: .gitignore  README.md  pyproject.toml
debian/: changelog  control  copyright
docs/: WHAT_TO_BUILD.txt
frontend/: app.js  index.html  styles.css
sample-project/: README.md  firstapp.json
scripts/: WHAT_TO_BUILD.txt
src/firstapp/: __main__.py  cli.py
src/playerbase/: WHAT_TO_BUILD.txt
src/playerbase/api/: WHAT_TO_BUILD.txt  __init__.py  server.py
src/playerbase/cli/: WHAT_TO_BUILD.txt  cli.py
src/playerbase/core/: WHAT_TO_BUILD.txt  authservice.py  commitscorer.py
src/playerbase/db/: WHAT_TO_BUILD.txt  commit.py  database.py  player.py  repo.py
src/playerbase/integrations/: WHAT_TO_BUILD.txt  ghapi.py
src/playerbase/scoring/: WHAT_TO_BUILD.txt  scoring.py
src/playerbase/workers/: WHAT_TO_BUILD.txt
tests/: WHAT_TO_BUILD.txt
