[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "firstapp"
version = "0.1.0"
description = "Bootstrap a project directory from the command line"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Cole Gundermann" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
firstapp = "firstapp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
